[gd_scene load_steps=4 format=2]

[ext_resource path="res://MapUIs/General/InteractionLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://FlightUIOverlay.gd" type="Script" id=2]
[ext_resource path="res://OnFootAssets/DialogueSystem/AnnouncementLayer.tscn" type="PackedScene" id=3]

[node name="FlightUIOverlay" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="IncreaseLabel" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -14.0
margin_right = 0.0
margin_bottom = 0.0
align = 2
interaction_result = "Increase Speed"
control = "increase_speed"

[node name="DecreaseLabel" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_right = 0.0
align = 2
interaction_result = "Decrease Speed"
control = "decrease_speed"

[node name="AnnouncementLayer" parent="." instance=ExtResource( 3 )]
scene_text_file = "res://OnFootAssets/DialogueSystem/world_announcements.json"

[connection signal="interacted_with" from="IncreaseLabel" to="." method="_on_IncreaseLabel_interacted_with"]
[connection signal="interacted_with" from="DecreaseLabel" to="." method="_on_DecreaseLabel_interacted_with"]
